syntax = "proto3";

package testdata;

import "google/protobuf/any.proto";

option go_package = "github.com/pomerium/pomerium/pkg/protoutil/testdata";

// Contains field types not found anywhere in envoy
message UnusualFields {
  map<bool, google.protobuf.Any>   bool_to_any   = 1;
  map<int32, google.protobuf.Any>  int32_to_any  = 2;
  map<int64, google.protobuf.Any>  int64_to_any  = 3;
  map<uint32, google.protobuf.Any> uint32_to_any = 4;
  map<uint64, google.protobuf.Any> uint64_to_any = 5;
  map<bool, int64> bool_to_int64 = 6;
}
